test_suite/ui/with_generics.rs
#[enumflags2::bitflags]
#[repr(u8)]
enum Foo<A> {
    Bar,
}

fn main() {}
